# vtol_sizing

./: CMakeLists.txt  LICENSE  README.md
Autodoc/theory_prog_manual/: Abbreviations.tex  Appendices.tex  GEBT.tex  Initialization.tex  Inputs.tex  Integration.tex  Introduction.tex  Methodology.tex  Organization.tex  Outputs.tex  Postprocessing.tex  Preprocessing.tex  Setup.tex  Stability.tex  Theory_Manual.tex  Title_UM.tex  Titlepage.tex  Trim.tex  User_Manual.tex  WhatNext.tex  commandlist.tex  packagelist.tex  references.bib
cases/: _gitignore
cases/Alpha/: defaults.yaml  defaults_beta.yaml  fixed_pitch.py  input.yaml  pies.py  piethon.py  process_data.py  xrun.py
cases/Alpha/Postprocessing/: carpet.py
cases/Beta/: defaults.yaml  fixed_pitch.py  input.yaml  perturbation.py  xrun.py
cases/Beta/Postprocessing/: performance.py  piethon.py  sensitivity_wrapper.py
cases/Beta_44_275_freq/: defaults.yaml  input.yaml  run.sh
cases/Beta_44_275_freq/Postprocessing/: battery_draw.py
cases/Beta_62/: bemt_standalone.py  best_rotor.yaml  create_fea_config.py  defaults.yaml  fixed_pitch.py  input.yaml  xrun.py
cases/Beta_62_275/: defaults.yaml  performance.py
cases/Beta_62_275/Postprocessing/: noise_prediction.py
cases/Beta_62_275_dragbuild/: AirfoilData  defaults.yaml  input.yaml
cases/Beta_62_275_dragbuild/Postprocessing/: piethon.py  sensitivity_wrapper.py
cases/Beta_62_275_freq/: defaults.yaml  run.sh
cases/Beta_GB/: BladeData  create_fea_config.py  defaults.yaml  input.yaml
cases/Beta_GB/Postprocessing/: process_stage.py  table.data
cases/Beta_GB4/: defaults.yaml  input.yaml  piethon.py  process_data.py
cases/Beta_GB4/Postprocessing/: performance.py
cases/Beta_check/: defaults.yaml  input.yaml  perturbation.py
cases/Beta_check/Postprocessing/: single_trendline.py
cases/Beta_mark2/: defaults.yaml  defaults_prototype.yaml  input.yaml
cases/Beta_mark2/Postprocessing/: optimize_driver.py  performance.py
cases/Beta_mark3/: defaults.yaml  input.yaml  process_data.py
cases/Beta_mark4/: defaults.yaml  input.yaml
cases/Beta_mark4/Postprocessing/: optimize_driver.py
cases/smr_ndarc/: breakdown.txt  create_fea_config.py  defaults.yaml  defaults.yaml1  input.yaml  input.yaml1  process_data.py  size_rotor.out  xrun.py
cases/smr_ndarc/Postprocessing/: carpet.py  make_plots.py  performance.py
cmake/Modules/: SetFortranFlags.cmake  f90wrap.cmake
src/Python/: hovermargins.py  run_lp.py  setup_lp.py
src/Python/Postprocessing/: assign_rank.py  battery_profile.py  constraints.py  draw_carpet.py  line_sensitivities.py  noise_generator.py  optimize.py  pie_generator.py  sensitivities.py  vehicle_performance.py  wing_carpets.py  wing_carpets_v2.py
src/Python/Stage_0/: constraints.py  dict2obj.py  footprint.py  hydraInterface.py
src/Python/Stage_1/: .gitignore  blade_properties.py  blade_wt_modelv2.py  calc_power.py  component_classes.py  conversions.py  cost_class.py  cruise.py  csd_rotor.py  data_processing.py  electric_transmission.py  empty_weight.py  engine_class.py  evaluate_CFv2.py  extract_plot_data.py  extract_summary_data.py  flat_plate_buildup.py  fuselage_class.py  geom_sweep.py  hover.py  hydra_summary_map.py  idle.py  input_swap.py  iterate_design.py  line_plots.py  locator.py  logdata.py  loops.py  march_one_step.py  motor_class.py  motor_mount_mass.py  motors.py  noise_v0.py  pbmodel.py  performance_defaults.py  performance_sweep.py  power_curve.py  power_curve_asymm.py  power_curve_coax.py  power_curve_sym.py  (+15 more)
src/Python/Stage_1/afdd/: FEM.py  alighting.py  compute.py  conversions.py  drive.py  emergency_sys.py  empennage.py  empty_weight.py  engine.py  fixed_wing.py  flight_controls.py  fuel_system.py  fuselage.py  fuselage_v2.py  gaussian.py  helicopter_emp.py  icing.py  motor_mount_mass.py  motors.py  rotor_wt.py  skin_mass.py  taper_beam.py  wing.py
src/Python/Stage_1/cost/: costbuildup.py  toolingcost.py
src/Python/Stage_1/engines/: DC_motor.py  battery_pack.py  diesel.py  electric_motor.py  engines.py  (+8 more)
src/Python/Stage_3/: FEA_class.py  _gitignore  airframeconfig.py  bemt_performance.py  regularize_tables.m  rotorconfig.py  sd7032.m  test_bemt.py  update_airframe_weight.py
src/bemt/: CMakeLists.txt
src/bemt/Source/: CMakeLists.txt
src/bemt/Source/pyint_files/: setup_bemt.F90
src/bemt/Source/pyint_modules/: bemt_types.F90  precision.F90
src/bemt/Source/pyinv_files/: RPM_sweep.F90  RPM_sweeps.F90  airfoil_table_mod.F90  collective_sweep.F90  converge_inflow.F90  evaluate_design.F90  evaluate_designs.F90  factorial_combinations.F90  interpolate_tables.F90  interpret_geometry.F90  modules.F90  populate_design_space.F90  read_airfoil.F90  setup_tables.F90  table_lookup.F90  trim_thrust.F90
src/fea/: CMakeLists.txt  pyoutput.py  xrun.sh
src/fea/Source/: CMakeLists.txt
src/fea/Source/mathops/: balanc.f  blas_dep.f  dcl1.f  ddassl2_sgi.f  dfrmg.f  dgbfa.f  dgbsl.f  dgeco.f  dgedi.f  dgefa.f  dgesl.f  dgesv.f  dhetr.f  dlasrt.f  dppsv.f  dspr.f  hybrd.f  rgg.f  sgeco.f  sgedi.f  sgefa.f  sgetrf.f  strsm.f  zheco.f  zhefa.f  zhesl.f  zl1nrm.f
src/fea/Source/pyint_files/: deallocate_mem.F90  index_bc.F90  one_time_transfer.F90  optimizeStructure.F90  preprocess.F90  writeFEAoutput.F90
src/fea/Source/pyint_files/scratch/: io.F90
src/fea/Source/pyint_modules/: airframe_config.F90  fea_types.F90  modules.F90
src/fea/Source/pyinv_files/: applybc.F90  assemble.F90  beam3d.F90  calculateLoads.F90  extractNaturalResponse.F90  findLocalCoordinate.F90  lapack_interfaces.F90  leqsolver_spl.F90  main.F90  solver.F90  updateStructure.F90  writeFEAoutput.F90
src/fea/inputs/: __config.py  beam.inp  material.py  rotorconfig.py  test.inp
src/sizing/: CMakeLists.txt  _gitignore
src/sizing/Source/: CMakeLists.txt  Makefile
src/sizing/Source/pyint_files/: rotorpower.F90
src/sizing/Source/pyint_modules/: aa1_isa.F90  aa2_modules.F90  airfoil_design_types.F90
src/utils/: py.py  rotorwt_testcases.py
src/utils/defaultInputs/: defaults.yaml
src/utils/engines/: test.py  turboshaft.yaml
src/utils/material/: aluminum.yaml
